Content edition and client logo adition

--- a/index.html
+++ b/index.html
@@ -193,11 +193,11 @@
                 soft skills and language training in Addis Ababa.
               </strong>
               <br />
-              We specialise in affordable and effective face-to-face and on-line
-              training in languages, management, communication, administration,
-              personal effectiveness and writing skills delivered by a team of
-              specialist and experts. Our programmes are stretching, motivating
-              and tailored to the individual learner. … and, fun. <br />
+              We specialise in affordable and effective face-to-face and online
+              training in communication, management, administration, personal
+              effectiveness and writing skills delivered by a team of specialist
+              and experts. Our programmes are stretching, motivating and
+              tailored to the individual learner. … and, fun. <br />
 
               We work with individuals (self or company sponsored) and
               organisations of all sizes across the public, NGO and commercial
@@ -842,7 +842,7 @@
                     </h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">
+                    <!-- <p class="text-muted">
                       Bridge offers programs and courses in English, Amharic,
                       French and a wide range of other local and foreign
                       languages such as Academic English, Business English,
@@ -850,7 +850,7 @@
                       focused on qualifications and attainment we also provide
                       different exam preparation programs for IELTS, SAT, TOEFL
                       and other national and international English exams.
-                    </p>
+                    </p> -->
                   </div>
                 </div>
               </li>
@@ -898,9 +898,10 @@
                       - are located in a superb easily accessible area, and
                       provide professional learning facilities and resources.
                       <br />
-                      - work with only the best, mostly native speaker teachers
-                      and professionals dedicated to provide a world class
-                      service <br />
+                      - work with only the best professionals dedicated to
+                      provide a world class learning and development
+                      interventions.
+                      <br />
                       - have a welcoming, warm atmosphere.
                     </p>
                   </div>
@@ -965,6 +966,14 @@
             >
               <div class="client-logo">
                 <img src="img/clients/Dejen.png" class="img-fluid" alt="" />
+              </div>
+            </div>
+            <div
+              class="col-lg-4 col-md-4 col-xs-6"
+              style="padding-top: 10px; margin-top: 20px"
+            >
+              <div class="client-logo">
+                <img src="img/clients/sandford.png" class="img-fluid" alt="" />
               </div>
             </div>
           </div>
@@ -1351,7 +1360,7 @@
             Bridge Professional Development Center is located on the road that
             leads form Megenagna to Gurd Shola right next to Ethio-Ceramics, on
             the ninth floor of Pecan Building.
-            <br />-The area is surrounded by the hiltops of Yeka in Megenagna
+            <br />-The area is surrounded by the hilltops of Yeka in Megenagna
             which has given the place a fascinating view. <br />-Our office is
             located on the left corner of the building’s ninth floor (office
             Number 901).
