--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     />
     <meta
       name="description"
-      content="Bridge Professional Development Center is your first choice for soft skills and language training in Addis Ababa. The development center is located in Gurd Shola, Addis Ababa Ethiopia. We provide training at
+      content="Bridge Professional Development Centre is your first choice for soft skills and language training in Addis Ababa. The development Centre is located in Gurd Shola, Addis Ababa Ethiopia. We provide training at
   any location our customers request and also provide online classes."
     />
     <meta
       name="keywords"
-      content="Bridge Proffesional Development Center, Bridge Development Center, Soft skill training, Professional Development Center in Addis Ababa, Professional Development Center in Ethiopia, Communication training, bridge, bridgepdc, bridgepdc.com"
+      content="Bridge Proffesional Development Centre, Bridge Development Centre, Soft skill training, Professional Development Centre in Addis Ababa, Professional Development Centre in Ethiopia, Communication training, bridge, bridgepdc, bridgepdc.com"
     />
     <meta name="author" content="Beka Haile" />
 
-    <title>Bridge Professional Development Center</title>
+    <title>Bridge Professional Development Centre</title>
 
     <!-- Bootstrap core CSS -->
     <link href="static/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
@@ -87,7 +87,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
-          Bridge Professional Development Center
+          Bridge Professional Development Centre
         </a>
         <!-- <img src="img/Bridge logo.jpg" alt="Avatar" style="border-radius: 50%; width:100px; height: 100px;"> -->
         <button
@@ -136,7 +136,7 @@
       <div class="container">
         <div class="intro-text">
           <div class="intro-lead-in">
-            <h1>Welcome To Bridge Professional Development Center</h1>
+            <h1>Welcome To Bridge Professional Development Centre</h1>
           </div>
           <div class="intro-heading text-uppercase">
             WE HAVE A PASSION FOR COMMUNICATION AND LANGUAGES
@@ -189,7 +189,7 @@
             <h3>About Us</h3>
             <p>
               <strong
-                >Bridge Professional Development Center is your first choice for
+                >Bridge Professional Development Centre is your first choice for
                 soft skills and language training in Addis Ababa.
               </strong>
               <br />
@@ -204,7 +204,7 @@
               sectors. <br />
 
               Whatever learning, training and development needs your
-              organisation has, bridge professional development center can
+              organisation has, bridge professional development Centre can
               create a tailor-made solution that fits you, your people, your
               budget and your plans. <br />
             </p>
@@ -793,7 +793,7 @@
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">About</h2>
             <h3 class="section-subheading text-muted">
-              Bridge Professional Development Center, training provider in Addis
+              Bridge Professional Development Centre, training provider in Addis
               Ababa, Ethiopia.
             </h3>
           </div>
@@ -869,7 +869,7 @@
                   <div class="timeline-body">
                     <p class="text-muted">
                       People have different schedules and different amounts of
-                      time available, so our development center offers different
+                      time available, so our development centre offers different
                       class options – schedule, size, location and duration -
                       that will give you the fullest flexibility, where you need
                       it.
@@ -1000,7 +1000,7 @@
               <p class="text-muted">Director</p>
               <p class="text-muted">
                 I am the owner and director of Bridge Professional Development
-                Center. I am passionate about education. Here are some of the
+                Centre. I am passionate about education. Here are some of the
                 milestones of my career, in Ethiopia and abroad. I have worked
                 in the education sector for 20 years in different capacities,
                 notably for the British Council as Facilitator, Programme
@@ -1357,7 +1357,7 @@
 
         <div style="margin-left: 5%; margin-top: 100px">
           <p style="color: white; size: 20px" class="text-left">
-            Bridge Professional Development Center is located on the road that
+            Bridge Professional Development Centre is located on the road that
             leads form Megenagna to Gurd Shola right next to Ethio-Ceramics, on
             the ninth floor of Pecan Building.
             <br />-The area is surrounded by the hilltops of Yeka in Megenagna
