Tab icon changed to logo

--- a/index.html
+++ b/index.html
@@ -89,7 +89,11 @@
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
           Bridge Professional Development Centre
         </a>
-        <!-- <img src="img/Bridge logo.jpg" alt="Avatar" style="border-radius: 50%; width:100px; height: 100px;"> -->
+        <!-- <img
+          src="img/Bridge logo.png"
+          alt="Avatar"
+          style="border-radius: 50%; width: 100px; height: 100px"
+        /> -->
         <button
           class="navbar-toggler navbar-toggler-right"
           type="button"
