Bio added for Mihret

--- a/index.html
+++ b/index.html
@@ -1031,6 +1031,15 @@
               />
               <h4>Mehiret Ayele</h4>
               <p class="text-muted">Customer Service Manager<br /></p>
+              <p class="text-muted">
+                My first degree was in civil engineering which gave me a
+                brilliant grounding for my work with Bridge Professional
+                Development Centre - dealing with multiple challenges with a
+                focus on detail, planning and execution. I've had a variety of
+                roles since graduation and in each one I've grown and learned
+                new things about work and serving others. I am passionate about
+                fashion design which brings out my creative strengths too.
+              </p>
             </div>
           </div>
           <div class="col-sm-4">
