World vision logo added and brochures removed

--- a/index.html
+++ b/index.html
@@ -366,13 +366,14 @@
           <h4 class="service-heading">
             Our current brochure of programs and services
           </h4>
-          <a href="flyer/Bridge Professional Development Center 2021.pdf">
+          <!-- <a href="flyer/Bridge Professional Development Center 2021.pdf">
             <img class="img-fluid" src="flyer/flyer 1.png" alt="" />
-          </a>
+          </a> -->
           <p class="text-muted">
-            <a href="flyer/Bridge Professional Development Center 2021.pdf">
+            Coming soon
+            <!-- <a href="flyer/Bridge Professional Development Center 2021.pdf">
               Click here </a
-            >for our current brochure
+            >for our current brochure -->
           </p>
           <!-- <h4 class="service-heading">Special Programs for Exam Preparation</h4>
         <p class="text-muted">
@@ -396,12 +397,13 @@
             Public course <br />
             schedule
           </h4>
-          <a href="flyer/Public Course schedule flyer.pdf">
+          <!-- <a href="flyer/Public Course schedule flyer.pdf">
             <img class="img-fluid" src="flyer/schedule.png" alt="" />
-          </a>
+          </a> -->
           <p class="text-muted">
-            <a href="flyer/Public Course schedule flyer.pdf"> Click here </a>for
-            our public course schedule
+            Coming soon
+            <!-- <a href="flyer/Public Course schedule flyer.pdf"> Click here </a>for
+            our public course schedule -->
           </p>
         </div>
       </div>
@@ -1001,6 +1003,12 @@
                   class="img-fluid"
                 />
             </li>
+            <li>
+              <img
+                src="img/clients/world vision.png"
+                class="img-fluid"
+              />
+          </li>
           </ul>
         </div>
       </div>
