Key words added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <meta
       name="keywords"
-      content="Bridge Proffesional Development Centre, Bridge Development Centre, Soft skill training, Professional Development Centre in Addis Ababa, Professional Development Centre in Ethiopia, Communication training, bridge, bridgepdc, bridgepdc.com"
+      content="Bridge Proffesional Development Centre, Bridge Development Centre, Soft skill training, Professional Development Centre in Addis Ababa, Professional Development Centre in Ethiopia, Communication training, bridge, bridgepdc, bridgepdc.com, Training, Soft Skills, Business English, Learning and development, Communication training, Customer Service Training, Public speaking training, Intercultural training, Amharic for expats, Leadership training, Coaching, Mentoring, Team building training, Awaydays"
     />
     <meta name="author" content="Beka Haile" />
 
