--- a/index.html
+++ b/index.html
@@ -2092,7 +2092,9 @@
       <!-- Custom scripts for this template -->
       <script src="js/agency.min.js"></script>
 
-      <script>
+
+      <!-- changing image script -->
+      <!-- <script>
         var bgImageArray = ["img/header-bg2.jpg","img/header-bg3.jpg","img/header-bg.jpg"],
         secs = 5;
         bgImageArray.forEach(function(img){
@@ -2111,7 +2113,7 @@
           }
         }
         backgroundSequence();
-      </script>
+      </script> -->
     </div>
   </body>
 </html>
