Main text changed

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             <h1>Welcome To Bridge Professional Development Centre</h1>
           </div>
           <div class="intro-heading text-uppercase">
-            WE HAVE A PASSION FOR COMMUNICATION AND LANGUAGES
+            We have a passion for learning and development!
           </div>
 
           <!-- <div class="animate intro-lead-in" style="max-width: 91%;">Excellence in language education and communication</div> -->
