Blof pdf name change

--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
             Learning for your Team - the Awayday
           </h4>
           <p class="text-muted">
-            <a href="blog/! Brown Liam Learning for your Team - the Awayday Option_3.pdf"> Click here </a> to read Learning for your Team - The Awayday
+            <a href="blog/Learning for your Team - The Awayday.pdf"> Click here </a> to read Learning for your Team - The Awayday
           </p>
         </div>
         <div class="col-md-4">
@@ -467,7 +467,7 @@
             Learning for your Team - The Bitesize
           </h4>
           <p class="text-muted">
-            <a href="blog/! Brown Liam Learning for your Team - The Bitesize Option_3.pdf"> Click here </a> to read Learning for your Team - The Bitesize
+            <a href="blog/Learning for your Team - The Bitesize.pdf"> Click here </a> to read Learning for your Team - The Bitesize
           </p>
         </div>
       </div>
