--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
             Learning for your Team - the Awayday
           </h4>
           <p class="text-muted">
-            <a href="blog/Learning for your Team - The Awayday.pdf"> Click here </a> to read Learning for your Team - The Awayday
+            <a href="flyer/Public Course schedule flyer.pdf"> Click here </a> to read Learning for your Team - The Awayday
           </p>
         </div>
         <div class="col-md-4">
