--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
             Learning for your Team - The Bitesize
           </h4>
           <p class="text-muted">
-            <a href="blog/Learning for your Team - The Bitesize.pdf"> Click here </a> to read Learning for your Team - The Bitesize
+            <a href="flyer/Learning for your Team - The Bitesize.pdf"> Click here </a> to read Learning for your Team - The Bitesize
           </p>
         </div>
       </div>
