--- a/index.html
+++ b/index.html
@@ -440,11 +440,9 @@
         <div class="col-md-2"></div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
-            <img
-              class="rounded-circle img-fluid"
-              src="img/about/5.png"
-              alt=""
-            />
+            <a href="flyer/Learning for your Team - The Awayday.pdf">
+              <img class="img-fluid" src="flyer/blog 1.png" alt="" />
+            </a>
           </span>
           <h4 class="service-heading">
             Learning for your Team - the Awayday
@@ -455,13 +453,9 @@
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
-            <img
-              class="rounded-circle img-fluid"
-              src="img/about/5.png"
-              alt=""
-              width="100"
-              height="100"
-            />
+            <a href="flyer/Learning for your Team - The Bitesize.pdf">
+              <img class="img-fluid" src="flyer/blog 2.png" alt="" />
+            </a>
           </span>
           <h4 class="service-heading">
             Learning for your Team - The Bitesize
