--- a/index.html
+++ b/index.html
@@ -1467,6 +1467,11 @@
               </li>
 
               <li>
+                <i class="fas fa-phone mt-4 fa-2x"></i>
+                <p>++251118538969</p>
+              </li>
+
+              <li>
                 <i class="fas fa-envelope mt-4 fa-2x"></i>
                 <p>info@bridgepdc.com</p>
               </li>
