--- a/index.html
+++ b/index.html
@@ -383,14 +383,14 @@
           <h4 class="service-heading">
             Our current brochure of programs and services
           </h4>
-          <!-- <a href="flyer/Bridge Professional Development Center 2021.pdf">
-            <img class="img-fluid" src="flyer/flyer 1.png" alt="" />
-          </a> -->
+          <a href="flyer/Brochure Dec 13 2021.pdf">
+            <img class="img-fluid" src="flyer/flyer 2.png" alt="Brochure"/>
+          </a>
           <p class="text-muted">
-            Coming soon
-            <!-- <a href="flyer/Bridge Professional Development Center 2021.pdf">
+            <!-- Coming soon -->
+            <a href="flyer/Brochure Dec 13 2021.pdf">
               Click here </a
-            >for our current brochure -->
+            >for our current brochure
           </p>
           <!-- <h4 class="service-heading">Special Programs for Exam Preparation</h4>
         <p class="text-muted">
