Public course schedule updated

--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
             Our current brochure of programs and services
           </h4>
           <a href="flyer/Brochure Dec 13 2021.pdf">
-            <img class="img-fluid" src="flyer/flyer 2.png" alt="Brochure"/>
+            <img class="img-fluid" src="flyer/flyer 2.png" alt="Brochure" style="margin-left: 160px !important;"/>
           </a>
           <p class="text-muted">
             <!-- Coming soon -->
@@ -414,13 +414,13 @@
             Public course <br />
             schedule
           </h4>
-          <!-- <a href="flyer/Public Course schedule flyer.pdf">
-            <img class="img-fluid" src="flyer/schedule.png" alt="" />
-          </a> -->
+           <a href="flyer/Public course schedule updated.pdf">
+            <img class="img-fluid" src="flyer/schedule.png" alt=""  style="margin-left: 160px !important;">
+          </a>
           <p class="text-muted">
             Coming soon
-            <!-- <a href="flyer/Public Course schedule flyer.pdf"> Click here </a>for
-            our public course schedule -->
+           <a href="flyer/Public course schedule updated.pdf"> Click here </a>for
+            our public course schedule
           </p>
         </div>
       </div>
