Public schedule changed to FAQ

--- a/index.html
+++ b/index.html
@@ -456,16 +456,16 @@
             />
           </span>
           <h4 class="service-heading">
-            Public course <br />
-            schedule
+            Frequently asked <br />
+            questions
           </h4>
-           <a href="flyer/Public course schedule updated.pdf">
+           <a href="flyer/Frequently asked questions BRIDGE Programme Final Feb 2022.pdf">
             <img class="img-fluid" src="flyer/schedule.png" alt=""  style="margin-left: 160px !important;">
           </a>
           <p class="text-muted">
             Coming soon
-           <a href="flyer/Public course schedule updated.pdf"> Click here </a>for
-            our public course schedule
+           <a href="flyer/Frequently asked questions BRIDGE Programme Final Feb 2022.pdf"> Click here </a>for
+            frequently asked questions
           </p>
         </div>
       </div>
