Cambridge icon added

--- a/index.html
+++ b/index.html
@@ -1131,7 +1131,13 @@
                 src="img/clients/world vision.png"
                 class="img-fluid"
               />
-          </li>
+            </li>
+            <li>
+              <img
+                src="img/clients/cambridge.png"
+                class="img-fluid"
+              />
+            </li>
           </ul>
         </div>
       </div>
