--- a/index.html
+++ b/index.html
@@ -1138,6 +1138,24 @@
                 class="img-fluid"
               />
             </li>
+            <li>
+              <img
+                src="img/clients/GPE.png"
+                class="img-fluid"
+              />
+              </li>
+            <li>
+              <img
+                src="img/clients/save the children.png"
+                class="img-fluid"
+              />
+            </li>
+            <li>
+              <img
+                src="img/clients/Capital Hotel.png"
+                class="img-fluid"
+              />
+            </li>
           </ul>
         </div>
       </div>
