--- a/index.html
+++ b/index.html
@@ -1155,6 +1155,11 @@
                 src="img/clients/Capital Hotel.png"
                 class="img-fluid"
               />
+            </li><li>
+              <img
+                src="img/clients/Gallani Coffee.png"
+                class="img-fluid"
+              />
             </li>
           </ul>
         </div>
