--- a/index.html
+++ b/index.html
@@ -1232,38 +1232,47 @@
               />
               <h4>Liam Brown</h4>
               <p class="text-muted">
-                Learning and Development Manager <br />
+                Programme Advisor <br />
               </p>
               <p class="text-muted">
-                I have been ‘in’ learning and development all my working life. It’s been my world for four decades. 
-                I know it as an experienced teacher, manager, trainer, writer and consultant working on achieving excellence at work in communication, collaborative learning, management and decision making. 
-                I worked extensively in Europe, Asia, the Middle East and UK for the British Council – the UK’s international organisation for education opportunities and cultural relations  for 29 years, latterly since 2002 as Learning and Development Manager for the worldwide English and Exams Strategic 
-                Business Unit with teaching operations in more than 50 countries and examinations in 850 towns and cities. In that role I was responsible for designing and delivering business-wide learning initiatives and interventions for managers, teachers, examinations administrators, specialists and support staff. <br /><br />
+                I have been 'in' learning and development all my working life. <br /><br />
 
-                Based in Addis Ababa, Ethiopia, I now work independently with individuals and businesses and institutions around the world who want to build trust in leadership, pride in achieving quality with increased effort and enjoyment of collegiality and teamwork. <br /><br />
+                I know this world as an experienced teacher, manager, trainer, speaker,
+                writer and consultant working on achieving excellence at work – in
+                communication, collaborative learning and decision making and
+                people-friendly people management.<br /><br />
 
-                I specialise in course and learning programme design guided by a number of key pedagogic principles grounded in scholarship and research into educational practices and experiences: A learning programme designed by me is: <br />
 
-                • coherent, relevant, up-to-date and immediately applicable; <br />
-                • people centred, inclusive and flexible <br />
-                • based on active and collaborative learning that builds learning relationships: course 
-                participants actively engage with the subject matter in interaction with others; <br />
-                • supportive of the progressive development of high level critical thinking and problem solving skills; <br /><br />
+                I have worked extensively in Europe, Asia, The Middle East and UK. In a
+                recent role I was responsible for designing and delivering Business
+                Unit-wide service-focused learning initiatives and learning
+                interventions for managers, teachers, specialist and support staff and
+                liaising extensively with third party vendors to collaborate on talent
+                development programmes.<br /><br />
 
-                I also design management and staff “Awaydays” to help people spend more >me ‘on the business’ rather than ‘in the business’. <br />
+                Based now in Portugal, I now work with individuals and institutions
+                around the world who want to foster pride in achieving the highest
+                quality and an enjoyment of collegiality and teamwork.<br /><br />
 
-                I am currently designing multiple programmes of “bitesize” 90-minute skills workshops that can scale from “one-to-many” for a broad range of staff levels and functions. <br /><br />
-                Work and Educational Milestones <br />
-                • Principal Consultant Liam Brown Training 2016 - present <br />
-                • Learning and Development Manager <br />
-                • English and Exams Strategic Business Unit, British Council 
-                (including a sabbatical Aug 2009 - 2012) 2002 - 2016 <br />
-                • Director, Professional Development Centre, British Council Singapore 1999 - 2002 <br />
-                • Deputy Director, PDC British Council Singapore 1995- 1999 <br />
-                • M.Ed (Training and Development) Sheffield University <br />
-                • Bachelor of Arts, University College Dublin <br />
-                • Higher Diploma in Education, University College Dublin <br />
-                • Diploma in English Language Teaching to Adults, Cambridge
+                As an invited keynote, plenary and conference speaker, I have extensive
+                experience of over 50 ELT, KM, HR and specialist business and
+                communication conferences around the world. My talks aim to be cutting
+                edge and challenging, sometimes inspirational, but always grounded in
+                real-world work contexts.<br /><br />
+
+
+                      Areas of expertise and interest:<br /><br />
+
+
+                        Managing communication, meetings and staff engagement – getting
+                the people side of the business right<br />
+                        Developing new approaches to staff appraisal and performance
+                assessment – once size certainly doesn't fit all<br />
+                        Building capacity and skills for best-in-class customer service
+                – this is where you can really stand out from the crowd<br />
+                        Building learning and development opportunities for all staff
+                including Away-days and 'bite-size' programmes. "Just in time, right
+                time, right way and inclusive".<br />
               </p>
             </div>
           </div>
