Us embassy and lersha added

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     
     .flexMe li img{
         width: 100%; 
-        height: auto;
+        height: 100px;
     }
     
     </style>
@@ -1155,9 +1155,22 @@
                 src="img/clients/Capital Hotel.png"
                 class="img-fluid"
               />
-            </li><li>
+            </li>
+            <li>
               <img
                 src="img/clients/Gallani Coffee.png"
+                class="img-fluid"
+              />
+            </li>
+            <li>
+              <img
+                src="img/clients/us embassy.jpg"
+                class="img-fluid"
+              />
+            </li>
+            <li>
+              <img
+                src="img/clients/lersha.png"
                 class="img-fluid"
               />
             </li>
