New flyer and brochure added

--- a/index.html
+++ b/index.html
@@ -428,12 +428,14 @@
           <h4 class="service-heading">
             Our current brochure of programs and services
           </h4>
-          <a href="flyer/Brochure Dec 13 2021.pdf">
-            <img class="img-fluid" src="flyer/flyer 2.png" alt="Brochure" style="margin-left: 160px !important;"/>
+          <span class="fa-stack fa-4x">
+          <a href="flyer/Public courses from June to August 2022.jpg">
+            <img class="img-fluid" src="flyer/Public courses from June to August 2022.jpg" alt="Brochure" />
           </a>
-          <p class="text-muted">
+          </span>
+          <p class="text-muted" style="margin-top: 30px;">
             <!-- Coming soon -->
-            <a href="flyer/Brochure Dec 13 2021.pdf">
+            <a href="flyer/Public courses from June to August 2022.jpg">
               Click here </a
             >for our current brochure
           </p>
@@ -456,15 +458,16 @@
             />
           </span>
           <h4 class="service-heading">
-            Frequently asked <br />
-            questions
+            Frequently asked questions
           </h4>
-           <a href="flyer/Frequently asked questions BRIDGE Programme Final Feb 2022.pdf">
-            <img class="img-fluid" src="flyer/schedule.png" alt=""  style="margin-left: 160px !important;">
-          </a>
-          <p class="text-muted">
+          <span class="fa-stack fa-4x">
+            <a href="flyer/FAQs Final July 2022.pdf">
+              <img class="img-fluid" src="flyer/flyer.PNG" alt="" >
+            </a>
+          </span>
+          <p class="text-muted" style="margin-top: 30px;">
             Coming soon
-           <a href="flyer/Frequently asked questions BRIDGE Programme Final Feb 2022.pdf"> Click here </a>for
+           <a href="flyer/FAQs Final July 2022.pdf"> Click here </a>for
             frequently asked questions
           </p>
         </div>
