List of courses added

--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
         class="row text-center"
         style="margin-top: 30px; margin-left: 2%; margin-right: 2%"
       >
-        <div class="col-md-2"></div>
+        <!-- <div class="col-md-2"></div> -->
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <img
@@ -440,15 +440,37 @@
             >for our current brochure
           </p>
           <!-- <h4 class="service-heading">Special Programs for Exam Preparation</h4>
-        <p class="text-muted">
-          Bridge offers exam preparation programs for IELTS, SAT, TOEFL and other national and international language
-          exams.
+            <p class="text-muted">
+              Bridge offers exam preparation programs for IELTS, SAT, TOEFL and other national and international language
+              exams.
+              
+              Our highly qualified teachers can guide and prepare you to achieve the best possible result especially if you
+              are challenged by
+              time and personal resources. We have everything you need – come talk to us. .
+            </p> -->
+          </div>
 
-          Our highly qualified teachers can guide and prepare you to achieve the best possible result especially if you
-          are challenged by
-          time and personal resources. We have everything you need – come talk to us. .
-        </p> -->
-        </div>
+          <div class="col-md-4">
+            <span class="fa-stack fa-4x">
+              <img
+                class="rounded-circle img-fluid"
+                src="img/about/5.png"
+                alt=""
+              />
+            </span>
+            <h4 class="service-heading">
+              List of courses
+            </h4>
+            <span class="fa-stack fa-4x">
+              <a href="flyer/List of our courses.jpg">
+                <img class="img-fluid" src="flyer/List of our courses.jpg" alt="" >
+              </a>
+            </span>
+            <p class="text-muted" style="margin-top: 30px;">
+             <a href="flyer/List of our courses.jpg"> Click here </a>for the
+              list of our courses
+            </p>
+          </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <img
