--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
           <p>Alternative text - include a link <a href="https://drive.google.com/file/d/13_AFxY_6uJEhYPbZuHYOBWg2A563fuy7/view?usp=sharing">to the PDF!</a></p>
         </object> -->
           <h4 class="service-heading">
-            Our current brochure of programs and services
+            Our Public Courses Schedule
           </h4>
           <span class="fa-stack fa-4x">
           <a href="flyer/Public courses from June to August 2022.jpg">
@@ -437,7 +437,7 @@
             <!-- Coming soon -->
             <a href="flyer/Public courses from June to August 2022.jpg">
               Click here </a
-            >for our current brochure
+            >for our Our Public Courses Schedule
           </p>
           <!-- <h4 class="service-heading">Special Programs for Exam Preparation</h4>
             <p class="text-muted">
