new logos added

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     }
     
     .flexMe li{
-        width: 200px; 
+        width: 185px; 
         height: 100px;
         display: flex;
         justify-content: center;
@@ -1196,6 +1196,108 @@
             <li>
               <img
                 src="img/clients/lersha.png"
+                class="img-fluid"
+              />
+            </li>
+            <li>
+              <img
+                src="img/clients/acme.jpg"
+                class="img-fluid"
+              />
+            </li>
+            <li>
+              <img
+                src="img/clients/hilltops.png"
+                class="img-fluid"
+              />
+            </li>
+            <li>
+              <img
+                src="img/clients/amcham.png"
+                class="img-fluid"
+              />
+            </li>
+            <li>
+              <img
+                src="img/clients/giz.png"
+                class="img-fluid"
+              />
+            </li>
+            <li>
+              <img
+                src="img/clients/espbc.png"
+                class="img-fluid"
+              />
+            </li>
+            <li>
+              <img
+                src="img/clients/bethany-christian-services.jpg"
+                class="img-fluid"
+              />
+            </li>
+            <li>
+              <img
+                src="img/clients/moenco.png"
+                class="img-fluid"
+              />
+            </li>
+            <li>
+              <img
+                src="img/clients/dca.png"
+                class="img-fluid"
+              />
+            </li>
+            <li>
+              <img
+                src="img/clients/marriott-hotel.png"
+                class="img-fluid"
+              />
+            </li>
+            <li>
+              <img
+                src="img/clients/ECOM.png"
+                class="img-fluid"
+              />
+            </li>
+            <li>
+              <img
+                src="img/clients/Haile_Resorts.png"
+                class="img-fluid"
+              />
+            </li>
+            <li>
+              <img
+                src="img/clients/berhan-insurance.png"
+                class="img-fluid"
+              />
+            </li>
+            <li>
+              <img
+                src="img/clients/don bosco.jpg"
+                class="img-fluid"
+              />
+            </li>
+            <li>
+              <img
+                src="img/clients/IEC1.png"
+                class="img-fluid"
+              />
+            </li>
+            <li>
+              <img
+                src="img/clients/rovestone.png"
+                class="img-fluid"
+              />
+            </li>
+            <li>
+              <img
+                src="img/clients/century-real-estate.png"
+                class="img-fluid"
+              />
+            </li>
+            <li>
+              <img
+                src="img/clients/wabe-shebelle-hotel.png"
                 class="img-fluid"
               />
             </li>
