updated client logos, added bridge logo to blogs and updated team information

--- a/index.html
+++ b/index.html
@@ -500,29 +500,29 @@
       <div class="col-md-2"></div>
       <div class="col-md-4">
         <span class="fa-stack fa-4x">
-          <a href="flyer/Learning for your Team - The Awayday.pdf">
-            <img class="img-fluid" src="flyer/blog 1.png" alt="" />
+          <a href="flyer/Learning for your Team-The Awaydays.pdf">
+            <img class="img-fluid" src="flyer/blog1.png" alt="" />
           </a>
         </span>
         <h4 class="service-heading">
           Learning for your Team - the Awayday
         </h4>
         <p class="text-muted">
-          <a href="flyer/Learning for your Team - The Awayday.pdf"> Click here </a> to read Learning for your Team - The
+          <a href="flyer/Learning for your Team-The Awaydays.pdf"> Click here </a> to read Learning for your Team - The
           Awayday
         </p>
       </div>
       <div class="col-md-4">
         <span class="fa-stack fa-4x">
-          <a href="flyer/Learning for your Team - The Bitesize.pdf">
-            <img class="img-fluid" src="flyer/blog 2.png" alt="" />
+          <a href="flyer/Learning for your Team-The Bitesize.pdf">
+            <img class="img-fluid" src="flyer/blog2.png" alt="" />
           </a>
         </span>
         <h4 class="service-heading">
           Learning for your Team - The Bitesize
         </h4>
         <p class="text-muted">
-          <a href="flyer/Learning for your Team - The Bitesize.pdf"> Click here </a> to read Learning for your Team -
+          <a href="flyer/Learning for your Team-The Bitesize.pdf"> Click here </a> to read Learning for your Team -
           The Bitesize
         </p>
       </div>
@@ -924,7 +924,7 @@
                 <img src="img/clients/Dejen.png" class="img-fluid client_item" />
               </li>
               <li>
-                <img src="img/clients/sandford.png" class="img-fluid client_item_lg" />
+                <img src="img/clients/sandford.jpg" class="img-fluid client_item_lg" />
               </li>
               <li>
                 <img src="img/clients/plan international.png" class="img-fluid client_item" />
@@ -933,7 +933,7 @@
                 <img src="img/clients/world vision.png" class="img-fluid client_item" />
               </li>
               <li>
-                <img src="img/clients/cambridge.png" class="img-fluid client_item" />
+                <img src="img/clients/cambridge.png" class="img-fluid client_item_lg" />
               </li>
               <li>
                 <img src="img/clients/GPE.png" class="img-fluid client_item" />
@@ -954,7 +954,7 @@
                 <img src="img/clients/lersha.png" class="img-fluid client_item" />
               </li>
               <li>
-                <img src="img/clients/acme.jpg" class="img-fluid client_item" />
+                <img src="img/clients/Acme.jpg" class="img-fluid client_item" />
               </li>
               <li>
                 <img src="img/clients/hilltops.png" class="img-fluid client_item" />
@@ -993,7 +993,7 @@
                 <img src="img/clients/don bosco.jpg" class="img-fluid client_item" />
               </li>
               <li>
-                <img src="img/clients/IEC.png" class="img-fluid client_item" />
+                <img src="img/clients/IEC.jpg" class="img-fluid client_item" />
               </li>
               <li>
                 <img src="img/clients/rovestone.png" class="img-fluid client_item" />
@@ -1023,7 +1023,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-sm-4">
+        <div class="col-sm-6">
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="" />
             <h4>Abayneh Haile</h4>
@@ -1048,23 +1048,7 @@
             </p>
           </div>
         </div>
-        <div class="col-sm-4">
-          <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/Mehiret.png" alt="" />
-            <h4>Mehiret Ayele</h4>
-            <p class="text-muted">Customer Service Manager<br /></p>
-            <p class="text-muted">
-              My first degree was in civil engineering which gave me a
-              brilliant grounding for my work with Bridge Professional
-              Development Centre - dealing with multiple challenges with a
-              focus on detail, planning and execution. I've had a variety of
-              roles since graduation and in each one I've grown and learned
-              new things about work and serving others. I am passionate about
-              fashion design which brings out my creative strengths too.
-            </p>
-          </div>
-        </div>
-        <div class="col-sm-4">
+        <div class="col-sm-6">
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/LB Photo .jpg" alt="" />
             <h4>Liam Brown</h4>
@@ -1120,7 +1104,7 @@
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/4.jpg" alt="" />
             <h4>Lynne Upton</h4>
-            <p class="text-muted">Online English teacher in the UK</p>
+            <p class="text-muted">Online Trainer</p>
             <p class="text-muted">
               Based in London, Lynne has taught English online to students in
               London, Ethiopia, Brazil and Turkey and has studied a Teaching
@@ -1134,7 +1118,7 @@
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/5.jpg" alt="" />
             <h4>Rob Rawlins</h4>
-            <p class="text-muted">Online English teacher in the UK</p>
+            <p class="text-muted">Online Trainer</p>
             <p class="text-muted">
               After working for the church, Rob changed career to English
               language teaching. He taught in London colleges and started his
@@ -1150,7 +1134,7 @@
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/6n.jpg" alt="" />
             <h4>Ruth Derrick</h4>
-            <p class="text-muted">Online English teacher in USA</p>
+            <p class="text-muted">Online Trainer</p>
             <p class="text-muted">
               Ruth Derrick is the Associate Director of Global Partners for
               Education. She has a Master’s Degree in English. She has taught
@@ -1234,23 +1218,6 @@
               well to work now with an ever-increasing range of up-to-date
               workplace skills for all levels of local and international
               professional, commercial and public service organisations.
-            </p>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/12.jpg" alt="" />
-            <h4>David Young</h4>
-            <p class="text-muted">
-              Graphics Designer and photographer in Spain <br />
-              Between 1999 and 2011 David worked in Ethiopia, spending up to
-              6-months of each year in Addis Ababa. There he worked with many
-              small-scale craft producers to enable them to better fit their
-              God-given creative gifts with the demands of the market, so
-              helping them to improve their incomes. David is now a CELTA
-              qualified teacher and filmmaker, based in Spain. David has
-              worked with Bridge as an editorial consultant and has also
-              designed some of their publicity resources.
             </p>
           </div>
         </div>
