--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
       <div class="col-md-4">
         <span class="fa-stack fa-4x">
           <a href="flyer/Learning for your Team-The Awaydays.pdf">
-            <img class="img-fluid" src="flyer/blog1.png" alt="" />
+            <img class="img-fluid" src="flyer/blog-1.png" alt="" />
           </a>
         </span>
         <h4 class="service-heading">
@@ -515,7 +515,7 @@
       <div class="col-md-4">
         <span class="fa-stack fa-4x">
           <a href="flyer/Learning for your Team-The Bitesize.pdf">
-            <img class="img-fluid" src="flyer/blog2.png" alt="" />
+            <img class="img-fluid" src="flyer/blog-2.png" alt="" />
           </a>
         </span>
         <h4 class="service-heading">
@@ -954,7 +954,7 @@
                 <img src="img/clients/lersha.png" class="img-fluid client_item" />
               </li>
               <li>
-                <img src="img/clients/Acme.jpg" class="img-fluid client_item" />
+                <img src="img/clients/acme-engineering.jpg" class="img-fluid client_item" />
               </li>
               <li>
                 <img src="img/clients/hilltops.png" class="img-fluid client_item" />
