--- a/index.html
+++ b/index.html
@@ -1387,8 +1387,13 @@
           <div class="col-md-4">
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
-                <a href="https://www.facebook.com/BridgeSchoolEthiopia/" target="_blank">
+                <a href="https://www.facebook.com/Bridgeprofessionaldevelopmentcentre" target="_blank">
                   <i class="fab fa-facebook-f"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://t.me/bridgeprofessionaldevtcentre" target="_blank">
+                  <i class="fab fa-telegram-plane"></i>
                 </a>
               </li>
               <li class="list-inline-item">
