--- a/index.html
+++ b/index.html
@@ -1392,6 +1392,11 @@
                 </a>
               </li>
               <li class="list-inline-item">
+                <a href="https://www.instagram.com/bridgepdc/" target="_blank">
+                  <i class="fab fa-instagram"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
                 <a href="https://t.me/bridgeprofessionaldevtcentre" target="_blank">
                   <i class="fab fa-telegram-plane"></i>
                 </a>
