updated team member betelhem to salome

--- a/index.html
+++ b/index.html
@@ -1150,26 +1150,32 @@
       <div class="row">
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/Betelhem.png" alt="" />
-            <h4>Betelhem Tesfaye</h4>
+            <img class="mx-auto rounded-circle" src="img/team/salome.png" alt="" />
+            <h4>Salome Dagnachew</h4>
             <p class="text-muted">Soft Skills Trainer <br /></p>
             <p class="text-muted">
-              I grew up in Debre Zeit, Ethiopia and attended Bahir Dar and
-              Addis Ababa university and graduated with a degree in English
-              Language Education with a special interest in TEFL. I started my
-              professional career straight away and over time built up a wide
-              portfolio of training and facilitating opportunities, with key
-              expertise in Core Skills training for the British Council, for
-              example: Creativity, Problem Solving, Citizenship, Digital
-              Literacy and Communication Skills. I also have significant
-              experience working on Leadership, Coaching and Team Building
-              programmes and training teachers on the British Council
-              prestigious LEAP (Learn English Audio Programme) programme. My
-              special driving interest as a validated facilitator is helping
-              people reach their individual potential and so I have been
-              boosting practitioners’ knowledge of pedagogy and life skills
-              through various platforms including the USAID-funded in-service
-              teacher training.
+              Salome Dagnachew is General Manager and Founder of Baroque Interiors and Events. She is proficient in
+              interior design and has been in the industry for 11 years. She has a Master of Business Administration
+              Degree from the University of Greenwich and a Diploma from British Interior Design College. She has vast
+              experience in procurement, logistics, administration, event management, and customer service.
+              Over the years, she has done unique projects in Addis Ababa and outside Ethiopia. Among them was the Bole
+              International Airport VIP Terminal, which involved local and foreign expertise. It was a five-year project
+              with collaboration from Ethiopia, Singapore, China, and other European countries. Her other projects
+              include office setup at Afrikadit in South Sudan, Muller Industries, Insurance companies Passenger lounges
+              of Ethiopian Airlines (Cloud 9, Gold Club, and Shebsmiles) at Terminal 2AA, to mention a few.
+              Salome Dagnachew is also proficient in event planning and management. She creates event strategies,
+              develops design and marketing concepts, and provides onsite management and post-event services. One of her
+              exquisite events was welcoming the Prime Minister of Eritrea after she designed the Old Eritrean Embassy.
+              Salome is giving master classes on event management, interior design, workplace etiquette, customer
+              service, teamwork, and leadership. She has delivered the following training so far:
+              - Office etiquette, office care, behaviour, and appearance
+              - Customer Services and
+              - Event management
+              She has also been involved in her community through volunteering at the Aba Gebresseselasse Terado Mahaber
+              and Mathiwos Wundu ye Ethiopia Cancer Society in Addis Ababa, Ethiopia, as well as the Corpus Christi
+              School in Virginia, United States of America. Currently, she is a member of Lions Club International and
+              the Vice President of the Lions Club Addis Ababa Greater and board member of Feseha Atlaw Wolde Yohannes
+              Endowment.
             </p>
           </div>
         </div>
